--- a/views/partials/lsrFooter.ejs
+++ b/views/partials/lsrFooter.ejs
@@ -1,3 +1,5 @@
+
+  
   <!-- FOOTER -->
   <footer class="lsr-footer">
     <ul class="social-links">
@@ -32,7 +34,7 @@
     </ul>
 
     <p class="copyright">
-      Copyright &copy; <span class="year"></span> all rights reserved.<br />
+      Copyright &copy; <script>document.write(new Date().getFullYear())</script>  all rights reserved.<br />
       Designed and Made by Prajot Baloliya.
     </p>
   </footer>
