--- a/views/partials/lsrHeader.ejs
+++ b/views/partials/lsrHeader.ejs
@@ -46,8 +46,6 @@
       src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
     ></script>
 
-    <script defer src="js/form.js"></script>
-
-    <title>Canteen Cravings</title>
+    <title><%= pageTitle %></title>
   </head>
 </html>
