--- a/public/css/queries.css
+++ b/public/css/queries.css
@@ -112,12 +112,12 @@
     padding: 0 4.8rem;
   }
 
-  .btn-form {
+  .button-form {
     margin-top: 1.2rem;
   }
 
   /* MOBILE NAVIGATION */
-  .btn-mobile-nav {
+  .button-mobile-nav {
     display: block;
     z-index: 9999;
   }
@@ -169,12 +169,12 @@
 
   .main-nav-list {
     flex-direction: column;
-    gap: 4.8rem;
+    gap: 4rem;
   }
 
   .main-nav-link:link,
   .main-nav-link:visited {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   .section-lsr {
@@ -234,9 +234,9 @@
     grid-template-columns: 1fr;
   }
 
-  .btn,
-  .btn:link,
-  .btn:visited {
+  .button,
+  .button:link,
+  .button:visited {
     padding: 2.4rem 1.6rem;
   }
 
