--- a/public/css/reset-password.css
+++ b/public/css/reset-password.css
@@ -83,7 +83,7 @@ body {
   box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.363);
 }
 
-.btn-reset-password {
+.button-reset-password {
   margin-top: 1rem;
   margin-left: 25%;
   width: 50%;
