--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,58 @@
 <%- include("partials/header.ejs");-%>
 <body>
-  <%- include("partials/navbar.ejs");-%>
+  <header>
+    <nav
+      id="navbar"
+      class="container-fluid navbar navbar-expand-xl fixed-top navbar-light bg-white"
+      style="background-color: rgba(255, 255, 255, 0.1)"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img
+            class="logo d-inline-block align-text-topd-inline-block align-text-top"
+            alt="Canteen Cravings Logo"
+            src="img/logos/CanteenCravesLONG-logo.png"
+          />
+        </a>
+
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#nav"
+          aria-controls="nav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-end" id="nav">
+          <ul class="main-nav-list navbar-nav">
+            <li class="nav-item">
+              <a href="#canteens" class="main-nav-link">Canteens</a>
+            </li>
+            <li class="nav-item">
+              <a href="#services" class="main-nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="#testimonials" class="main-nav-link">Testimonials</a>
+            </li>
+            <li class="nav-item">
+              <a href="#gallery" class="main-nav-link">Gallery</a>
+            </li>
+
+            <li class="nav-item">
+              <a href="/login" class="btn btn-primary btn-lg main-nav-list"
+                >Login</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
   <main>
     <!-- HERO -->
     <section class="section-hero">
@@ -14,7 +66,9 @@
             from any where and collect it from your respective canteens once
             it's ready. For faculties get it delievered to your cabin.
           </p>
-          <a href="#cta" class="btn btn-full margin-right-sm">Order Now</a>
+          <a href="#cta" class="button button-full margin-right-sm"
+            >Order Now</a
+          >
         </div>
 
         <!-- HERO IMAGE -->
@@ -46,7 +100,7 @@
         <div class="canteen">
           <a href="/sdbce">
             <img
-              src="img/canteens/SDBCE.webp"
+              src="img/canteens/SDBCE.jpg"
               class="canteen-img"
               alt="SDBCE Canteen"
             />
@@ -63,7 +117,7 @@
         <div class="canteen">
           <a href="/sdbct">
             <img
-              src="img/canteens/SDCBT.webp"
+              src="img/canteens/SDCBT.jpg"
               class="canteen-img"
               alt="SDBCT Canteen"
             />
@@ -310,7 +364,7 @@
             />
           </div>
 
-          <button class="btn btn-form btn-lsr">Sign up</button>
+          <button class="button button-form button-lsr">Sign up</button>
         </form>
 
         <div class="lsr-foot">
@@ -326,6 +380,26 @@
       ></div>
     </div>
   </section>
+
+  <!-- JS -->
+  <script src="/js/script.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    type="module"
+    src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+  ></script>
+  <script
+    nomodule
+    src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+  ></script>
+  <script
+    defer
+    src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
+  ></script>
 </body>
 
 <%- include("partials/footer.ejs");-%>
