--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -48,31 +48,10 @@
         </ul>
 
         <p class="copyright">
-          Copyright &copy; <span class="year"></span> all rights reserved.<br />
+          Copyright &copy; <script>document.write(new Date().getFullYear())</script> all rights reserved.<br />
           Designed and Made by Prajot Baloliya.
         </p>
       </div>
     </div>
   </footer>
-
-  <!-- JS -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    type="module"
-    src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-  ></script>
-  <script
-    nomodule
-    src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-  ></script>
-  <script
-    defer
-    src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
-  ></script>
- 
-</body>
 </html>
