improved imgs jpg -> webp

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -224,7 +224,7 @@
         <figure class="gallery-item">
           <img
             class="gallery-img"
-            src="img/gallery/gallery-1.jpg"
+            src="img/gallery/gallery-1.webp"
             alt="photo of food"
           />
         </figure>
@@ -232,7 +232,7 @@
         <figure class="gallery-item">
           <img
             class="gallery-img"
-            src="img/gallery/gallery-2.jpg"
+            src="img/gallery/gallery-2.webp"
             alt="photo of food"
           />
         </figure>
@@ -240,7 +240,7 @@
         <figure class="gallery-item">
           <img
             class="gallery-img"
-            src="img/gallery/gallery-3.jpg"
+            src="img/gallery/gallery-3.webp"
             alt="photo of food"
           />
         </figure>
@@ -248,7 +248,7 @@
         <figure class="gallery-item">
           <img
             class="gallery-img"
-            src="img/gallery/gallery-4.jpg"
+            src="img/gallery/gallery-4.webp"
             alt="photo of food"
           />
         </figure>
@@ -256,7 +256,7 @@
         <figure class="gallery-item">
           <img
             class="gallery-img"
-            src="img/gallery/gallery-5.jpg"
+            src="img/gallery/gallery-5.webp"
             alt="photo of food"
           />
         </figure>
@@ -264,7 +264,7 @@
         <figure class="gallery-item">
           <img
             class="gallery-img"
-            src="img/gallery/gallery-6.jpg"
+            src="img/gallery/gallery-6.webp"
             alt="photo of food"
           />
         </figure>
@@ -272,7 +272,7 @@
         <figure class="gallery-item">
           <img
             class="gallery-img"
-            src="img/gallery/gallery-7.jpg"
+            src="img/gallery/gallery-7.webp"
             alt="photo of food"
           />
         </figure>
@@ -280,7 +280,7 @@
         <figure class="gallery-item">
           <img
             class="gallery-img"
-            src="img/gallery/gallery-8.jpg"
+            src="img/gallery/gallery-8.webp"
             alt="photo of food"
           />
         </figure>
@@ -288,7 +288,7 @@
         <figure class="gallery-item">
           <img
             class="gallery-img"
-            src="img/gallery/gallery-9.jpg"
+            src="img/gallery/gallery-9.webp"
             alt="photo of food"
           />
         </figure>
@@ -296,7 +296,7 @@
         <figure class="gallery-item">
           <img
             class="gallery-img"
-            src="img/gallery/gallery-10.jpg"
+            src="img/gallery/gallery-10.webp"
             alt="photo of food"
           />
         </figure>
@@ -304,7 +304,7 @@
         <figure class="gallery-item">
           <img
             class="gallery-img"
-            src="img/gallery/gallery-11.jpg"
+            src="img/gallery/gallery-11.webp"
             alt="photo of food"
           />
         </figure>
@@ -312,7 +312,7 @@
         <figure class="gallery-item">
           <img
             class="gallery-img"
-            src="img/gallery/gallery-12.jpg"
+            src="img/gallery/gallery-12.webp"
             alt="photo of food"
           />
         </figure>
