--- a/views/index.ejs
+++ b/views/index.ejs
@@ -145,7 +145,7 @@
           <p class="feature-title">Local and organic</p>
           <p class="feature-text">
             Our cooks only use local, fresh, and organic products to prepare
-            your canteens.
+            your food.
           </p>
         </div>
 
@@ -153,8 +153,8 @@
           <ion-icon class="feature-icon" name="hourglass-outline"></ion-icon>
           <p class="feature-title">On time delievery</p>
           <p class="feature-text">
-            Always get your canteens on time, never miss out on your delicious
-            food.
+            Always get your food prepared on time, never miss out on your
+            delicious food.
           </p>
         </div>
 
