--- a/views/partials/canteenHeader.ejs
+++ b/views/partials/canteenHeader.ejs
@@ -9,12 +9,14 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
+    <!-- FAV icon -->
     <link rel="icon" href="img/favicons/favCanteenCravings.png" />
     <link
       rel="apple-touch-icon"
       href="img/favicons/appleFavCanteenCravings.png"
     />
 
+    <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,6 +26,7 @@
       rel="stylesheet"
     />
 
+    <!-- Scripts -->
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
@@ -37,7 +40,7 @@
       src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
     ></script>
 
-    <!-- CSS only -->
+    <!-- CSSy -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -48,7 +51,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-
+    <link href="/css/lsr.css" rel="stylesheet" />
     <link href="/css/canteenshop.css" rel="stylesheet" />
 
     <title><%= pageTitle %></title>
