--- a/views/sdbce.ejs
+++ b/views/sdbce.ejs
@@ -16,6 +16,7 @@
   <!-- Section-->
   <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
+      <h2 class="display-4 fw-bolder text-center mb-5">Menu</h2>
       <div
         class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
       >
@@ -24,48 +25,15 @@
             <!-- Product image-->
             <img
               class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
+              src="/img/canteens/sdbce/chesse chuney sandwiches.png"
+              alt="Cheese Chutney Sandwich"
             />
             <!-- Product details-->
             <div class="card-body p-4">
               <div class="text-center">
                 <!-- Product name-->
-                <h5 class="fw-bolder">Fancy Product</h5>
-                <!-- Product price-->
-                ₹40.00 - ₹80.00
-              </div>
-            </div>
-            <!-- Product actions-->
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-              <div class="text-center">
-                <a class="btn btn-outline-dark mt-auto" href="#"
-                  >View options</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-5">
-          <div class="card h-100">
-            <!-- Sale badge-->
-            <div
-              class="badge bg-dark text-white position-absolute"
-              style="top: 0.5rem; right: 0.5rem"
-            >
-              Sale
-            </div>
-            <!-- Product image-->
-            <img
-              class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
-            />
-            <!-- Product details-->
-            <div class="card-body p-4">
-              <div class="text-center">
-                <!-- Product name-->
-                <h5 class="fw-bolder">Special Item</h5>
+                <h5 class="fw-bolder">Cheese Chutney Sandwich</h5>
+
                 <!-- Product reviews-->
                 <div
                   class="d-flex justify-content-center small text-warning mb-2"
@@ -74,13 +42,56 @@
                   <div class="bi-star-fill"></div>
                   <div class="bi-star-fill"></div>
                   <div class="bi-star-fill"></div>
+                  <div class="bi-star"></div>
+                  <div class="text-muted">(39)</div>
+                </div>
+
+                <!-- Product price-->
+                ₹60.00
+              </div>
+            </div>
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center">
+                <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col mb-5">
+          <div class="card h-100">
+            <!-- Sale badge-->
+            <div
+              class="badge bg-dark text-white position-absolute"
+              style="top: 0.5rem; right: 0.5rem"
+            >
+              Popular
+            </div>
+            <!-- Product image-->
+            <img
+              class="card-img-top"
+              src="/img/canteens/sdbce/Aloo Paratha.png"
+              alt="Aloo paratha"
+            />
+            <!-- Product details-->
+            <div class="card-body p-4">
+              <div class="text-center">
+                <!-- Product name-->
+                <h5 class="fw-bolder">Aloo Paratha</h5>
+                <!-- Product reviews-->
+                <div
+                  class="d-flex justify-content-center small text-warning mb-2"
+                >
                   <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-half"></div>
+                  <div class="text-muted">(44)</div>
                 </div>
                 <!-- Product price-->
-                <span class="text-muted text-decoration-line-through"
-                  >₹20.00</span
-                >
-                ₹18.00
+                ₹30.00
               </div>
             </div>
             <!-- Product actions-->
@@ -98,24 +109,75 @@
               class="badge bg-dark text-white position-absolute"
               style="top: 0.5rem; right: 0.5rem"
             >
-              Sale
+              Special
             </div>
             <!-- Product image-->
             <img
               class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
+              src="/img/canteens/sdbce/Baked Samosa.png"
+              alt="Baked samosa"
             />
             <!-- Product details-->
             <div class="card-body p-4">
               <div class="text-center">
                 <!-- Product name-->
-                <h5 class="fw-bolder">Sale Item</h5>
-                <!-- Product price-->
-                <span class="text-muted text-decoration-line-through"
-                  >₹50.00</span
+                <h5 class="fw-bolder">Baked Samosa</h5>
+                <!-- Product reviews-->
+                <div
+                  class="d-flex justify-content-center small text-warning mb-2"
                 >
-                ₹25.00
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star"></div>
+                  <div class="text-muted">(55)</div>
+                </div>
+                <!-- Product price-->
+                ₹20.00
+              </div>
+            </div>
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center">
+                <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col mb-5">
+          <div class="card h-100">
+            <!-- Product image-->
+            <img
+              class="card-img-top"
+              src="/img/canteens/sdbce/Poha.png"
+              alt="Poha"
+            />
+            <div
+              class="badge bg-dark text-white position-absolute"
+              style="top: 0.5rem; right: 0.5rem"
+            >
+              Best Choice
+            </div>
+            <!-- Product details-->
+            <div class="card-body p-4">
+              <div class="text-center">
+                <!-- Product name-->
+                <h5 class="fw-bolder">Poha</h5>
+                <!-- Product reviews-->
+                <div
+                  class="d-flex justify-content-center small text-warning mb-2"
+                >
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-half"></div>
+                  <div class="text-muted">(102)</div>
+                </div>
+                <!-- Product price-->
+                ₹10.00
               </div>
             </div>
             <!-- Product actions-->
@@ -131,14 +193,14 @@
             <!-- Product image-->
             <img
               class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
+              src="/img/canteens/sdbce/Samosa.png"
+              alt="Samosa"
             />
             <!-- Product details-->
             <div class="card-body p-4">
               <div class="text-center">
                 <!-- Product name-->
-                <h5 class="fw-bolder">Popular Item</h5>
+                <h5 class="fw-bolder">Samosa</h5>
                 <!-- Product reviews-->
                 <div
                   class="d-flex justify-content-center small text-warning mb-2"
@@ -147,8 +209,73 @@
                   <div class="bi-star-fill"></div>
                   <div class="bi-star-fill"></div>
                   <div class="bi-star-fill"></div>
-                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-half"></div>
+                  <div class="text-muted">(78)</div>
                 </div>
+                <!-- Product price-->
+                ₹10.00
+              </div>
+            </div>
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center">
+                <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col mb-5">
+          <div class="card h-100">
+            <!-- Product image-->
+            <img
+              class="card-img-top"
+              src="/img/canteens/sdbce/masala sandwich.png"
+              alt="Masala Sandwich"
+            />
+            <!-- Product details-->
+            <div class="card-body p-4">
+              <div class="text-center">
+                <!-- Product name-->
+                <h5 class="fw-bolder">Masala Sandwich</h5>
+                <!-- Product reviews-->
+                <div
+                  class="d-flex justify-content-center small text-warning mb-2"
+                >
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-half"></div>
+                  <div class="text-muted">(56)</div>
+                </div>
+                <!-- Product price-->
+                ₹30.00
+              </div>
+            </div>
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center">
+                <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col mb-5">
+          <div class="card h-100">
+            <!-- Product image-->
+            <img
+              class="card-img-top"
+              src="/img/canteens/sdbce/Hershey and Cavin's.png"
+              alt="Hershey or Canvin's"
+            />
+            <!-- Product details-->
+            <div class="card-body p-4">
+              <div class="text-center">
+                <!-- Product name-->
+                <h5 class="fw-bolder">Hershey or Cavin's</h5>
+
                 <!-- Product price-->
                 ₹40.00
               </div>
@@ -161,138 +288,22 @@
             </div>
           </div>
         </div>
+
         <div class="col mb-5">
           <div class="card h-100">
-            <!-- Sale badge-->
-            <div
-              class="badge bg-dark text-white position-absolute"
-              style="top: 0.5rem; right: 0.5rem"
-            >
-              Sale
-            </div>
             <!-- Product image-->
             <img
               class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+              src="/img/canteens/sdbce/sprite.png"
               alt="..."
             />
             <!-- Product details-->
             <div class="card-body p-4">
               <div class="text-center">
                 <!-- Product name-->
-                <h5 class="fw-bolder">Sale Item</h5>
+                <h5 class="fw-bolder">Sprite and other Drinks</h5>
                 <!-- Product price-->
-                <span class="text-muted text-decoration-line-through"
-                  >₹50.00</span
-                >
-                ₹25.00
-              </div>
-            </div>
-            <!-- Product actions-->
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-              <div class="text-center">
-                <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-5">
-          <div class="card h-100">
-            <!-- Product image-->
-            <img
-              class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
-            />
-            <!-- Product details-->
-            <div class="card-body p-4">
-              <div class="text-center">
-                <!-- Product name-->
-                <h5 class="fw-bolder">Fancy Product</h5>
-                <!-- Product price-->
-                ₹120.00 - ₹280.00
-              </div>
-            </div>
-            <!-- Product actions-->
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-              <div class="text-center">
-                <a class="btn btn-outline-dark mt-auto" href="#"
-                  >View options</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-5">
-          <div class="card h-100">
-            <!-- Sale badge-->
-            <div
-              class="badge bg-dark text-white position-absolute"
-              style="top: 0.5rem; right: 0.5rem"
-            >
-              Sale
-            </div>
-            <!-- Product image-->
-            <img
-              class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
-            />
-            <!-- Product details-->
-            <div class="card-body p-4">
-              <div class="text-center">
-                <!-- Product name-->
-                <h5 class="fw-bolder">Special Item</h5>
-                <!-- Product reviews-->
-                <div
-                  class="d-flex justify-content-center small text-warning mb-2"
-                >
-                  <div class="bi-star-fill"></div>
-                  <div class="bi-star-fill"></div>
-                  <div class="bi-star-fill"></div>
-                  <div class="bi-star-fill"></div>
-                  <div class="bi-star-fill"></div>
-                </div>
-                <!-- Product price-->
-                <span class="text-muted text-decoration-line-through"
-                  >₹20.00</span
-                >
-                ₹18.00
-              </div>
-            </div>
-            <!-- Product actions-->
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-              <div class="text-center">
-                <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-5">
-          <div class="card h-100">
-            <!-- Product image-->
-            <img
-              class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
-            />
-            <!-- Product details-->
-            <div class="card-body p-4">
-              <div class="text-center">
-                <!-- Product name-->
-                <h5 class="fw-bolder">Popular Item</h5>
-                <!-- Product reviews-->
-                <div
-                  class="d-flex justify-content-center small text-warning mb-2"
-                >
-                  <div class="bi-star-fill"></div>
-                  <div class="bi-star-fill"></div>
-                  <div class="bi-star-fill"></div>
-                  <div class="bi-star-fill"></div>
-                  <div class="bi-star-fill"></div>
-                </div>
-                <!-- Product price-->
-                ₹40.00
+                ₹15.00-₹40.00
               </div>
             </div>
             <!-- Product actions-->
