--- a/views/sdbct.ejs
+++ b/views/sdbct.ejs
@@ -12,9 +12,9 @@
     </div>
   </header>
 
-  <!-- Section-->
   <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
+      <h2 class="display-4 fw-bolder text-center mb-5">Menu</h2>
       <div
         class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
       >
@@ -23,48 +23,15 @@
             <!-- Product image-->
             <img
               class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
+              src="/img/canteens/sdbct/Samosa.png"
+              alt="Samosa"
             />
             <!-- Product details-->
             <div class="card-body p-4">
               <div class="text-center">
                 <!-- Product name-->
-                <h5 class="fw-bolder">Fancy Product</h5>
-                <!-- Product price-->
-                ₹40.00 - ₹80.00
-              </div>
-            </div>
-            <!-- Product actions-->
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-              <div class="text-center">
-                <a class="btn btn-outline-dark mt-auto" href="#"
-                  >View options</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-5">
-          <div class="card h-100">
-            <!-- Sale badge-->
-            <div
-              class="badge bg-dark text-white position-absolute"
-              style="top: 0.5rem; right: 0.5rem"
-            >
-              Sale
-            </div>
-            <!-- Product image-->
-            <img
-              class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
-            />
-            <!-- Product details-->
-            <div class="card-body p-4">
-              <div class="text-center">
-                <!-- Product name-->
-                <h5 class="fw-bolder">Special Item</h5>
+                <h5 class="fw-bolder">Samosa</h5>
+
                 <!-- Product reviews-->
                 <div
                   class="d-flex justify-content-center small text-warning mb-2"
@@ -73,13 +40,12 @@
                   <div class="bi-star-fill"></div>
                   <div class="bi-star-fill"></div>
                   <div class="bi-star-fill"></div>
-                  <div class="bi-star-fill"></div>
+                  <div class="bi-star"></div>
+                  <div class="text-muted">(60)</div>
                 </div>
+
                 <!-- Product price-->
-                <span class="text-muted text-decoration-line-through"
-                  >₹20.00</span
-                >
-                ₹18.00
+                ₹10.00
               </div>
             </div>
             <!-- Product actions-->
@@ -90,54 +56,27 @@
             </div>
           </div>
         </div>
+
         <div class="col mb-5">
           <div class="card h-100">
             <!-- Sale badge-->
             <div
-              class="badge bg-dark text-white position-absolute"
+              class="badge bg-light text-black position-absolute"
               style="top: 0.5rem; right: 0.5rem"
             >
-              Sale
+              Popular
             </div>
             <!-- Product image-->
             <img
               class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
+              src="/img/canteens/sdbct/Bhel.png"
+              alt="Bhel"
             />
             <!-- Product details-->
             <div class="card-body p-4">
               <div class="text-center">
                 <!-- Product name-->
-                <h5 class="fw-bolder">Sale Item</h5>
-                <!-- Product price-->
-                <span class="text-muted text-decoration-line-through"
-                  >₹50.00</span
-                >
-                ₹25.00
-              </div>
-            </div>
-            <!-- Product actions-->
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-              <div class="text-center">
-                <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-5">
-          <div class="card h-100">
-            <!-- Product image-->
-            <img
-              class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
-            />
-            <!-- Product details-->
-            <div class="card-body p-4">
-              <div class="text-center">
-                <!-- Product name-->
-                <h5 class="fw-bolder">Popular Item</h5>
+                <h5 class="fw-bolder">Bhel</h5>
                 <!-- Product reviews-->
                 <div
                   class="d-flex justify-content-center small text-warning mb-2"
@@ -146,10 +85,11 @@
                   <div class="bi-star-fill"></div>
                   <div class="bi-star-fill"></div>
                   <div class="bi-star-fill"></div>
-                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-half"></div>
+                  <div class="text-muted">(105)</div>
                 </div>
                 <!-- Product price-->
-                ₹40.00
+                ₹30.00
               </div>
             </div>
             <!-- Product actions-->
@@ -160,88 +100,20 @@
             </div>
           </div>
         </div>
-        <div class="col mb-5">
-          <div class="card h-100">
-            <!-- Sale badge-->
-            <div
-              class="badge bg-dark text-white position-absolute"
-              style="top: 0.5rem; right: 0.5rem"
-            >
-              Sale
-            </div>
-            <!-- Product image-->
-            <img
-              class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
-            />
-            <!-- Product details-->
-            <div class="card-body p-4">
-              <div class="text-center">
-                <!-- Product name-->
-                <h5 class="fw-bolder">Sale Item</h5>
-                <!-- Product price-->
-                <span class="text-muted text-decoration-line-through"
-                  >₹50.00</span
-                >
-                ₹25.00
-              </div>
-            </div>
-            <!-- Product actions-->
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-              <div class="text-center">
-                <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
-              </div>
-            </div>
-          </div>
-        </div>
+
         <div class="col mb-5">
           <div class="card h-100">
             <!-- Product image-->
             <img
               class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
+              src="/img/canteens/sdbct/Poha.png"
+              alt="Poha"
             />
             <!-- Product details-->
             <div class="card-body p-4">
               <div class="text-center">
                 <!-- Product name-->
-                <h5 class="fw-bolder">Fancy Product</h5>
-                <!-- Product price-->
-                ₹120.00 - ₹280.00
-              </div>
-            </div>
-            <!-- Product actions-->
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-              <div class="text-center">
-                <a class="btn btn-outline-dark mt-auto" href="#"
-                  >View options</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-5">
-          <div class="card h-100">
-            <!-- Sale badge-->
-            <div
-              class="badge bg-dark text-white position-absolute"
-              style="top: 0.5rem; right: 0.5rem"
-            >
-              Sale
-            </div>
-            <!-- Product image-->
-            <img
-              class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
-            />
-            <!-- Product details-->
-            <div class="card-body p-4">
-              <div class="text-center">
-                <!-- Product name-->
-                <h5 class="fw-bolder">Special Item</h5>
+                <h5 class="fw-bolder">Poha</h5>
                 <!-- Product reviews-->
                 <div
                   class="d-flex justify-content-center small text-warning mb-2"
@@ -250,13 +122,11 @@
                   <div class="bi-star-fill"></div>
                   <div class="bi-star-fill"></div>
                   <div class="bi-star-fill"></div>
-                  <div class="bi-star-fill"></div>
+                  <div class="bi-star"></div>
+                  <div class="text-muted">(55)</div>
                 </div>
                 <!-- Product price-->
-                <span class="text-muted text-decoration-line-through"
-                  >₹20.00</span
-                >
-                ₹18.00
+                ₹10.00
               </div>
             </div>
             <!-- Product actions-->
@@ -267,19 +137,21 @@
             </div>
           </div>
         </div>
+
         <div class="col mb-5">
           <div class="card h-100">
             <!-- Product image-->
             <img
               class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-              alt="..."
+              src="/img/canteens/sdbct/chesse chuney sandwich.png"
+              alt="Cheese Chutney Sandwich"
             />
+
             <!-- Product details-->
             <div class="card-body p-4">
               <div class="text-center">
                 <!-- Product name-->
-                <h5 class="fw-bolder">Popular Item</h5>
+                <h5 class="fw-bolder">Cheese Chutney Sandwich</h5>
                 <!-- Product reviews-->
                 <div
                   class="d-flex justify-content-center small text-warning mb-2"
@@ -288,10 +160,167 @@
                   <div class="bi-star-fill"></div>
                   <div class="bi-star-fill"></div>
                   <div class="bi-star-fill"></div>
-                  <div class="bi-star-fill"></div>
+                  <div class="bi-star"></div>
+                  <div class="text-muted">(53)</div>
                 </div>
                 <!-- Product price-->
-                ₹40.00
+                ₹70.00
+              </div>
+            </div>
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center">
+                <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col mb-5">
+          <div class="card h-100">
+            <!-- Product image-->
+            <img
+              class="card-img-top"
+              src="/img/canteens/sdbct/chole bhature.png"
+              alt="Chole Bhature"
+            />
+            <!-- Sale badge-->
+            <div
+              class="badge bg-dark text-white position-absolute"
+              style="top: 0.5rem; right: 0.5rem"
+            >
+              Special
+            </div>
+            <!-- Product details-->
+            <div class="card-body p-4">
+              <div class="text-center">
+                <!-- Product name-->
+                <h5 class="fw-bolder">Chole Bhature</h5>
+                <!-- Product reviews-->
+                <div
+                  class="d-flex justify-content-center small text-warning mb-2"
+                >
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-half"></div>
+                  <div class="text-muted">(89)</div>
+                </div>
+                <!-- Product price-->
+                ₹50.00
+              </div>
+            </div>
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center">
+                <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col mb-5">
+          <div class="card h-100">
+            <!-- Product image-->
+            <img
+              class="card-img-top"
+              src="/img/canteens/sdbct/masala sandwich.png"
+              alt="Masala Sandwich"
+            />
+            <!-- Product details-->
+            <div class="card-body p-4">
+              <div class="text-center">
+                <!-- Product name-->
+                <h5 class="fw-bolder">Masala Sandwich</h5>
+                <!-- Product reviews-->
+                <div
+                  class="d-flex justify-content-center small text-warning mb-2"
+                >
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-half"></div>
+                  <div class="text-muted">(56)</div>
+                </div>
+                <!-- Product price-->
+                ₹30.00
+              </div>
+            </div>
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center">
+                <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col mb-5">
+          <div class="card h-100">
+            <!-- Product image-->
+            <img
+              class="card-img-top"
+              src="/img/canteens/sdbct/noodles.png"
+              alt="noodles"
+            />
+            <!-- Product details-->
+            <div class="card-body p-4">
+              <div class="text-center">
+                <!-- Product name-->
+                <h5 class="fw-bolder">Noodles</h5>
+                <!-- Product reviews-->
+                <div
+                  class="d-flex justify-content-center small text-warning mb-2"
+                >
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-half"></div>
+                  <div class="bi-star"></div>
+                  <div class="text-muted">(39)</div>
+                </div>
+
+                <!-- Product price-->
+                ₹50.00
+              </div>
+            </div>
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+              <div class="text-center">
+                <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col mb-5">
+          <div class="card h-100">
+            <!-- Product image-->
+            <img
+              class="card-img-top"
+              src="/img/canteens/sdbct/lassi.png"
+              alt="Lassi"
+            />
+            <!-- Product details-->
+            <div class="card-body p-4">
+              <div class="text-center">
+                <!-- Product name-->
+                <h5 class="fw-bolder">Lassi</h5>
+                <!-- Product reviews-->
+                <div
+                  class="d-flex justify-content-center small text-warning mb-2"
+                >
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-fill"></div>
+                  <div class="bi-star-half"></div>
+                  <div class="text-muted">(45)</div>
+                </div>
+                <!-- Product price-->
+                ₹30.00
               </div>
             </div>
             <!-- Product actions-->
