--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,12 +23,16 @@
             Sign up and order your food from anywhere, anytime.
           </p>
 
-          <form class="lsr-form" name="resiter-form" action="/" method="post">
+          <form
+            class="lsr-form"
+            name="resiter-form"
+            action="/register"
+            method="POST"
+          >
             <div>
-              <label for="full-name">Full Name</label>
+              <label for="full name">Full Name</label>
               <input
-                class="full_name"
-                id="full_name"
+                id="fname"
                 type="text"
                 placeholder="John Doe"
                 name="fname"
@@ -38,18 +42,16 @@
             <div>
               <label for="email">Email Address</label>
               <input
-                class="email"
                 id="email"
                 type="email"
                 placeholder="johndoe@gmail.com"
-                name="email"
+                name="username"
               />
             </div>
 
             <div>
               <label for="password">Password</label>
               <input
-                class="password"
                 id="password"
                 type="password"
                 placeholder="password"
@@ -57,11 +59,7 @@
               />
             </div>
 
-            <button
-              class="button button-form button-lsr submitBtn"
-              id="reg-button"
-              onclick="register()"
-            >
+            <button class="button button-form button-lsr" id="reg-button">
               Sign up
             </button>
           </form>
@@ -83,12 +81,6 @@
 </body>
 
 <!-- JS -->
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-<!-- TODO: Add SDKs for Firebase products that you want to use
-https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
 <script src="/js/form.js"></script>
 
 <%- include("partials/lsrFooter.ejs"); -%>
