improved interface of users

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,6 +55,9 @@
   background-color: #3b5bdb;
 }
 
+.dropdown-menu {
+  font-size: 1.8rem;
+}
 /***********************/
 /* HERO SECTION*/
 /***********************/
