--- a/views/logIndex.ejs
+++ b/views/logIndex.ejs
@@ -42,7 +42,7 @@
             </li>
 
             <li class="nav-item">
-              <div class="dropdown">
+              <div class="dropdown container-fluid">
               <a class=" dropdown-toggle text-decoration-none" type="button" id="user" data-bs-toggle="dropdown" aria-expanded="false"><ion-icon name="person-outline"></ion-icon>USER</a>
               <ul class="dropdown-menu" aria-labelledby="user">
               <li><a class="dropdown-item" href="/cart">My Cart</a></li>
